--- a/TheBeginning/Config/DefaultGame.ini
+++ b/TheBeginning/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5E4121BA4B48B967EE688AA608EA75B7
+CompanyName=Yota Tech
+CompanyDistinguishedName=Yota Tech
+CopyrightNotice=Copyright yotta 2017
 
 [StartupActions]
 bAddPacks=True
