--- a/TheBeginning/Config/DefaultEngine.ini
+++ b/TheBeginning/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
 GameDefaultMap=/Game/NewMap.NewMap
-GlobalDefaultGameMode="/Script/TheBeginning.TheBeginningGameMode"
+GlobalDefaultGameMode=/Game/TheBeginningGameMode_BP.TheBeginningGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
